--- a/pom.xml
+++ b/pom.xml
@@ -66,49 +66,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.backend.api</groupId>
-			<artifactId>CryptoBackend</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.netflix.astyanax</groupId>
-			<artifactId>astyanax-core</artifactId>
-			<version>1.56.48</version>
-		</dependency>
-		<dependency>
-			<groupId>com.netflix.astyanax</groupId>
-			<artifactId>astyanax-thrift</artifactId>
-			<version>1.56.48</version>
-		</dependency>
-		<dependency>
-			<groupId>com.netflix.astyanax</groupId>
-			<artifactId>astyanax-cassandra</artifactId>
-			<version>1.56.48</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-email</artifactId>
-			<version>1.3.2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sksamuel.scrimage</groupId>
-			<artifactId>scrimage-core_2.10</artifactId>
-			<version>1.3.15</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sksamuel.scrimage</groupId>
-			<artifactId>scrimage-filters_2.10</artifactId>
-			<version>1.3.15</version>
-		</dependency>
-		<dependency>
-			<groupId>jmimemagic</groupId>
-			<artifactId>jmimemagic</artifactId>
-			<version>0.1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openid4java</groupId>
-			<artifactId>openid4java</artifactId>
-			<version>0.9.8</version>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.4</version>
 		</dependency>
 	</dependencies>
 	<build>
